--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,11 @@ header .menu .c3{
     opacity: .3;
 }
 
+/*Ventana modal*/
+.modal-dialog{
+    max-width: 1000px;
+}
+
 
 
 
@@ -107,3 +112,100 @@ header .menu .c3:hover{
     .portafolio .galeria .contenedor-imagen:nth-child(6){order: 4;}
     .portafolio .galeria .contenedor-imagen:nth-child(7){order: 7;}
  }
+
+ /*Acerca De */
+
+ .acerca-de .foto .nombre{
+    color:#545454;
+    font-weight: 300;
+    font-size: 18px;
+    letter-spacing: 2px;
+ }
+
+ .acerca-de .info .titulo{
+    color: #676767;
+    font-size: 40px;
+    margin-bottom: 30px;
+ }
+
+ .acerca-de .info .label{
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(197, 99, 118);
+    margin-bottom: 10px;
+ }
+
+ .acerca-de .info .progress{
+    background: #676767;
+    border-radius: 0;
+    height: 25px;
+ }
+
+ .acerca-de .info .progress .progress-bar{
+    background: #010101;
+    line-height: 25px;
+    padding-left: 20px;
+ }
+
+ /*Contacto*/
+ .contacto{
+    border-top: 1px solid crimson;
+ }
+
+ .contacto .titulo{
+    color: #676767;
+    font-weight: 300;
+    font-size: 40px;
+    margin-bottom: 40px;
+    text-align: center;
+ }
+
+ .contacto .formulario input[type="text"],
+ .contacto .formulario input[type="email"],
+ .contacto .formulario textarea{
+    padding: 15px;
+    border: none;
+ }
+
+ .contacto .formulario textarea{
+    height: 150px;
+    min-height: 150px;
+    max-height: 250px;
+ }
+
+ .contacto .formulario .boton{
+    color: white;
+    background: #676767;
+    border: none;
+    padding: 7px 30px;
+    cursor: pointer;
+    width: auto;
+    border-radius: 3px;
+ }
+
+ .contacto .formulario .boton:hover{
+    background: #010101;
+    color: crimson;
+ }
+
+ /*footer*/
+
+ .redes-sociales{
+    padding: 40px 0;
+    margin-bottom: 40px;
+ }
+
+ .redes-sociales .icono{
+    width: 100px;
+    height: 100px;
+    color: rgb(255, 255, 255);
+    background: #545454;
+    display: inline-block;
+    margin: 0px 20px;
+    text-decoration: none;
+    border-radius: 100px;
+    transition: all .2s ease;
+ }
+
+ .redes-sociales .link{ background: #0e76a8;}
+ .redes-sociales .git{ background: #171515;}
